Cpsc 581 page update

--- a/CPSC581.html
+++ b/CPSC581.html
@@ -124,9 +124,9 @@
              <!--Project Tags  -->
              <div class="card-footer">
                <!-- Web Developement Tag with Popover  -->
-               <button type="button" class="btn btn-primary disabled btn-sm web-development-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see related projects">Web Development</button>
+               <button type="button" class="btn btn-primary disabled btn-sm web-development-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see projects related to this">Web Development</button>
                <!-- UI Design Tag  -->
-               <button name="ui-design" type="button" class="btn btn-primary disabled btn-sm ui-design-btn" style="font-size : 0.6rem">UI Design</button>
+               <button type="button" class="btn btn-primary disabled btn-sm cpsc-581-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see projects related to this">CPSC 581</button>
              </div>
            </div>
          </div>
@@ -153,9 +153,9 @@
               <!--Project Tags  -->
               <div class="card-footer">
                 <!-- Web Developement Tag with Popover  -->
-                <button type="button" class="btn btn-primary disabled btn-sm web-development-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see related projects">Web Development</button>
+                <button type="button" class="btn btn-primary disabled btn-sm ios-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see projects related to this">iOS</button>
                 <!-- UI Design Tag  -->
-                <button name="ui-design" type="button" class="btn btn-primary disabled btn-sm ui-design-btn" style="font-size : 0.6rem">UI Design</button>
+                <button type="button" class="btn btn-primary disabled btn-sm cpsc-581-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see projects related to this">CPCS 581</button>
               </div>
             </div>
           </div>
@@ -183,9 +183,9 @@
               <!--Project Tags  -->
               <div class="card-footer">
                 <!-- Web Developement Tag with Popover  -->
-                <button type="button" class="btn btn-primary disabled btn-sm web-development-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see related projects">Web Development</button>
+                <button type="button" class="btn btn-primary disabled btn-sm arduino-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see projects related to this">Arduino</button>
                 <!-- UI Design Tag  -->
-                <button name="ui-design" type="button" class="btn btn-primary disabled btn-sm ui-design-btn" style="font-size : 0.6rem">UI Design</button>
+                <button type="button" class="btn btn-primary disabled btn-sm cpsc-581-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see projects related to this">CPSC 581</button>
               </div>
             </div>
           </div>
@@ -212,9 +212,9 @@
               <!--Project Tags  -->
               <div class="card-footer">
                 <!-- Web Developement Tag with Popover  -->
-                <button type="button" class="btn btn-primary disabled btn-sm web-development-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see related projects">Web Development</button>
+                <button type="button" class="btn btn-primary disabled btn-sm arduino-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see projects related to this">Arduino</button>
                 <!-- UI Design Tag  -->
-                <button name="ui-design" type="button" class="btn btn-primary disabled btn-sm ui-design-btn" style="font-size : 0.6rem">UI Design</button>
+                <button type="button" class="btn btn-primary disabled btn-sm cpsc-581-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see projects related to this">CPSC 581</button>
               </div>
             </div>
           </div>
@@ -724,7 +724,7 @@
                 <h4> Project Summary: </h4>
                 <br>
 
-                <p> A project built using Arduino that allows a user to be notified when their laundry is done. The purpose behind this project was to create a physical prototype with Arduino to solve an everyday problem. 
+                <p> A project built using Arduino that allows a user to be notified when their laundry is done. The purpose behind this project was to create a physical prototype with Arduino to solve an everyday problem.
                 </p>
 
 
@@ -738,9 +738,6 @@
                 <div class="d-flex justify-content-center align-items-center">
                               <iframe width="560" height="315" src="https://www.youtube.com/embed/xsy5i1rr-PA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
-                <br>
-                <br>
-
                 <br>
                 <br>
               </div>
@@ -877,7 +874,7 @@
             <br>
 
             <!-- Refinement -->
-            <h4>Implementation:</h4>
+            <h4>Design & Implementation:</h4>
 
 
             <br>
@@ -886,6 +883,9 @@
               <div class="col col-md-12 col-12">
 
                 <p> After reviewing our refined sketches and discussing some more, we decided to go forward with the washing machine idea. The idea for this was to have a sensor on the washing machine that could notify the user once it had finished. Many people find it annoying to leave their clothes in the washer or dryer, which can leave them with mildew or wrinkles. This product solves that problem, but notifiying a person when the cycle of the machine is done. Ideally, there would be a sensor on each of the washer and dryer, as well as a receiver for each household memeber, but due to limited time and materials we only made one sensor and receiver. We wanted it to be discrete for the user, so we encased both the sensor on the washing machine and the receiver held by the user in black boxes to hide the wires. Inside the first box, which is placed on the washing machine with magnets, contains the vibration sensor and has the on/off switch, which once activated, will signal the user once the washing machine cycle has ended. The box that is carried on the user has a light and a buzzer that lights up and plays a Mario-themed song to let the user know when the washing machine is finished.
+                <br>
+                <br>
+                For the design of this project we wanted something that was discrete, and only became noticable when the device was notifying the user of the washing machine being done. There were other ideas that we discussed, such as having a set of buttons on the washing machine, corresponding to each person in the house and another receiver, that would be notified when the wachine wachine was finished. However, this would have been much larger then the design we ended up going with and would require and a larger number of recievers. For the reciever itself, there were ideas to have it attached to the wall of the room, but we decided that a device that could be carried in a person's pocket would be more practical.
                 <br>
                 <br>
                 For implementing this project, we largely worked in the lab to brainstorm, design, program, and debug, since there was only one arduino board that could be worked on. However, this proved to be productive and we were able to finish the majority of the project in the lab.
@@ -941,9 +941,31 @@
             <!-- Design -->
             <div class="row">
 
+              <div class="col-12 col-md-6">
+                <h4> Project Summary: </h4>
+                <br>
+
+                <p> A project built using Arduino that displays the heartbeat pattern of the user, and changes color and speed to reflect the person's heartrate. The instructions for this project was to create a fashion tech garment using Arduino that has at least one input and output sensor.
+                </p>
+
+
+                <br>
+                <br>
+              </div>
+
+              <div class="col-12 col-md-6">
+                <h4> Video Demonstration: </h4>
+
+                <div class="d-flex justify-content-center align-items-center">
+                              <iframe width="560" height="315" src="https://www.youtube.com/embed/DxfFG0FaRt8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <br>
+                <br>
+              </div>
+
               <div class="col col-md-12 col-12">
                 <h4>Initial Sketches:</h4>
-                <p> The purpose of this project was to create a fashion technology garment using Arduino. To come up with a large selection of ideas to choose from we each sketched 10 different ideas. For my initial sketches I thought of primarily LEDs as the output, as this would be the most feasible to implement given the resources available to us. Some of my ideas involved inputs such as geo-location, touch, heartbeat, light, or a specific motion. I liked the idea of having visual feedback with the lights in response to some input, so a lot of my ideas contained some form of lights turning on in sync with the users input.
+                <p> To come up with a large selection of ideas to choose from we each sketched 10 different ideas. For my initial sketches I thought of primarily LEDs as the output, as this would be the most feasible to implement given the resources available to us. Some of my ideas involved inputs such as geo-location, touch, heartbeat, light, or a specific motion. I liked the idea of having visual feedback with the lights in response to some input, so a lot of my ideas contained some form of lights turning on in sync with the users input.
                 </p>
 
 
@@ -1147,19 +1169,7 @@
               <!-- </div> -->
             </div>
 
-
-
-
             <br>
-
-            <h4> Video Demonstration: </h4>
-
-            <div class="d-flex justify-content-center align-items-center">
-                          <iframe width="560" height="315" src="https://www.youtube.com/embed/DxfFG0FaRt8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <br>
-            <br>
-
 
 
 
