--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,22 @@
 
 
       <div class="container px-3">
-        <h3 class="border-bottom">Contact Me:</h3>
+        <h3 class="border-bottom">Ways To Reach Me:</h3>
+
+        <br>
+        <br>
+
+        <a href="https://www.linkedin.com/in/zachariah-albers-b23a70132/" class="btn btn-secondary" target="_blank"><img src="./imgs/linkedin-icon.png" style="height: 1.3rem; width: 1.3rem"> LinkedIn Profile</a>
+
+        <br>
+        <br>
+        <br>
+
+        <h3 class="border-bottom">Other:</h3>
+        <br>
+        <br>
+
+        <a href="https://github.com/zachalbers" class="btn btn-secondary" target="_blank"><img src="./imgs/GitHub-Icon.png" style="height: 1.3rem; width: 1.3rem"> GitHub Profile</a>
 
       </div>
 
@@ -81,7 +96,7 @@
 
 
 <!-- About Me Container -->
-    <div class="container px-3">
+    <!-- <div class="container px-3">
       <h3 class="border-bottom">About Me:</h3>
       <div class="row">
         <div class="col col-md-6 col-lg-7 col-12">
@@ -91,27 +106,10 @@
           <img src="./imgs/ZachAlbers.jpg" class="img-fluid rounded">
         </div>
       </div>
-    </div>
-
-    <!-- Overview of Skills Container -->
-    <div class="container my-5 px-3">
-      <h3 class="border-bottom">Overview of Skills:</h3>
-
-      <div class="row">
-
-        <!-- Skills -->
-        <div class="col col-md-6">
-          <p>Hello</p>
-
-        </div>
-        <div class="col col-md-6">
-          <p>Hello</p>
-        </div>
+    </div> -->
 
 
-      </div>
-    </div>
-
+<!--
     <div class="container-fluid my-5 py-5">
       <h3 class="border-bottom">Highlighted Projects:</h3>
     </div>
@@ -122,37 +120,8 @@
 
     <div class="container-fluid my-5 py-5">
       <h3 class="border-bottom">Highlighted Projects:</h3>
-    </div>
+    </div> -->
 
-
-
-    <!-- Project: Full Descriptions -->
-
-
-    <!-- Project 1:   -->
-    <div class="modal fade" id="projectModal1" tabindex="-1" role="dialog" aria-labelledby="modalLabel1" aria-hidden="true">
-      <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h2 class="modal-title" id="modalLabel1">The Nanny Shack</h2>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-
-            <p class="modal-text">A prototype website build for a social enterprise that aims to help parents who are struggling to find affordable and flexible daycare, as well as nannies who are struggling to find secure job employment..</p>
-
-
-            ...
-            <img class="card-img-top" src="./imgs/bulb-s.png" alt="Card image cap">
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          </div>
-        </div>
-      </div>
-    </div>
 
 
 
