--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <!-- Links -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="extraCss.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Orbitron:400,500" rel="stylesheet">
   </head>
   <body class="bg-light">
     <!--
@@ -31,22 +32,23 @@
           <br>
           <br>
 
-
-          <br>
           <div class="row">
-            <div class="col col-sm-8 col-12">
+            <div class="col-12 col-md-7">
               <h1 class="display-4 text-left">
                 <span class="display-3 mainTextColor">Zachariah Albers</span></h1>
             </div>
 
-            <div class="col col-sm-4 col-12">
+            <div class="col-12 col-md-5">
               <br>
 
 
-              <ul class="h3 mainTextColor font-weight-bold text-left">
-                <li>Designer</li>
-                <li>Traveler</li>
+              <ul class="h3 mainTextColor font-weight-bold text-left noBullets">
+                <li class="ml-5">Designer</li>
+                <br>
                 <li>Technology Fanatic</li>
+                <br>
+                <li class="ml-5">Traveler</li>
+                <br>
                 <li>Learning Enthusiast</li>
               </ul>
 
@@ -61,25 +63,26 @@
 
         <!-- Main Navigation Bar  -->
         <div class="container-fluid ">
-          <div class="d-flex">
+          <!-- <div class="d-flex"> -->
 
-            <div class="flex-grow-1">
-            </div>
+            <!-- <div class="flex-grow-1">
+            </div> -->
 
             <div>
               <nav class="d-flex justify-content-center nav">
                 <a class="nav-link disabled h4 border-bottom" id="home-Button"> <span id="currently-Selected-Tab">Home</span></a>
                 <a class="nav-link h4 text-primary" id="projects-Button">Projects</a>
                 <a class="nav-link h4 text-primary" id="contact-Button">Contact</a>
-              </nav>
-            </div>
-
-            <div class="flex-grow-1">
-              <nav id="cpsc581nav" class="px-4">
                 <a class="nav-link h4 text-primary" id="cpsc581-Button">CPSC 581</a>
               </nav>
             </div>
-          </div>
+
+            <!-- <div class="flex-grow-1">
+              <nav id="cpsc581nav" class="px-4">
+                <a class="nav-link h4 text-primary" id="cpsc581-Button">CPSC 581</a>
+              </nav>
+            </div> -->
+          <!-- </div> -->
         </div>
 
         <br>
