--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,7 @@
     <!-- Links -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="extraCss.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Orbitron:400,500" rel="stylesheet">
   </head>
   <body class="bg-light">
     <!--
@@ -27,24 +28,37 @@
     -->
 
 
-        <div class="container">
-          <br>
-          <br>
-          <h1 class="display-4 text-right">
-            Hello, my name is <span class="display-3 mainTextColor">Zachariah Albers</span></h1>
+    <div class="container">
+      <br>
+      <br>
 
-          <br>
-          <div class="row">
-            <div class="col col-sm-8 col-12">
-              <p class="h4 font-weight-light text-left">
-                I am a third-year Commerce and Computer Science student interersted in <span class="secondaryTextColor font-weight-bold">iOS</span> development, <span class="secondaryTextColor font-weight-bold">Front-End Web</span> development, and <span class="secondaryTextColor font-weight-bold">Entrepreneurship</span></p>
-            </div>
-            <div class="col-sm">
-            </div>
-          </div>
-          <br>
-          <br>
+      <div class="row">
+        <div class="col-12 col-md-7">
+          <h1 class="display-4 text-left">
+            <span class="display-3 mainTextColor">Zachariah Albers</span></h1>
         </div>
+
+        <div class="col-12 col-md-5">
+          <br>
+
+
+          <ul class="h3 mainTextColor font-weight-bold text-left noBullets">
+            <li class="ml-5">Designer</li>
+            <br>
+            <li>Technology Fanatic</li>
+            <br>
+            <li class="ml-5">Traveler</li>
+            <br>
+            <li>Learning Enthusiast</li>
+          </ul>
+
+        </div>
+        <div class="col-sm">
+        </div>
+      </div>
+      <br>
+      <br>
+    </div>
 
 
       <!-- Main Navigation Bar  -->
