Website Footer link addition

--- a/CPSC581.html
+++ b/CPSC581.html
@@ -62,32 +62,19 @@
 
       <!-- Main Navigation Bar  -->
       <div class="container-fluid ">
-        <div class="d-flex">
 
-          <div class="flex-grow-1">
-          </div>
 
           <div>
             <nav class="d-flex justify-content-center nav">
               <a class="nav-link h4 text-primary" id="home-Button">Home</a>
               <a class="nav-link h4 text-primary" id="projects-Button">Projects</a>
-
               <a class="nav-link h4 text-primary" id="contact-Button">Contact</a>
+              <a class="nav-link h4 text-primary disabled border-bottom" id="cpsc581-Button"><span id="currently-Selected-Tab">CPSC 581</span></a>
+
 
             </nav>
           </div>
 
-          <div class="flex-grow-1">
-            <nav id="cpsc581nav" class="px-4">
-              <a class="nav-link h4 text-primary border-bottom" id="cpsc581-Button"><span id="currently-Selected-Tab"></span>CPSC 581</a>
-            </nav>
-          </div>
-
-
-
-
-
-        </div>
 
       </div>
 
@@ -1201,6 +1188,12 @@
 
 
 
+
+
+    <div class="container fluid border-top">
+      <br>
+      <p> <small>This website was built by Zachariah Albers. See the GitHub repository for it <a href="https://github.com/zachalbers/zachalbers.github.io">here</a>.</small></p>
+    </div>
 
 
 
