--- a/contact.html
+++ b/contact.html
@@ -63,25 +63,16 @@
 
       <!-- Main Navigation Bar  -->
       <div class="container-fluid ">
-        <div class="d-flex">
-
-          <div class="flex-grow-1">
-          </div>
 
           <div>
             <nav class="d-flex justify-content-center nav">
               <a class="nav-link h4 text-primary" id="home-Button">Overview</a>
               <a class="nav-link h4 text-primary" id="projects-Button">Projects</a>
               <a class="nav-link h4 text-primary border-bottom" id="contact-Button"><span id="currently-Selected-Tab">Contact</span></a>
-            </nav>
-          </div>
-
-          <div class="flex-grow-1">
-            <nav id="cpsc581nav" class="px-4">
               <a class="nav-link h4 text-primary" id="cpsc581-Button">CPSC 581</a>
             </nav>
           </div>
-        </div>
+
       </div>
 
 
@@ -103,6 +94,18 @@
 
         <a href="https://github.com/zachalbers" class="btn btn-secondary" target="_blank"><img src="./imgs/GitHub-Icon.png" style="height: 1.3rem; width: 1.3rem"> GitHub Profile</a>
 
+      </div>
+
+      <div>
+        <br>
+        <br>
+        <br>
+      </div>
+
+
+      <div class="container fluid border-top">
+        <br>
+        <p> <small>This website was built by Zachariah Albers. See the GitHub repository for it <a href="https://github.com/zachalbers/zachalbers.github.io">here</a>.</small></p>
       </div>
 
 
