--- a/index.html
+++ b/index.html
@@ -400,6 +400,11 @@
       </div>
     </div>
 
+    <div class="container fluid border-top">
+      <br>
+      <p> <small>This website was built by Zachariah Albers. See the GitHub repository for it <a href="https://github.com/zachalbers/zachalbers.github.io">here</a>.</small></p>
+    </div>
+
 
 
 
