--- a/projects.html
+++ b/projects.html
@@ -57,24 +57,18 @@
     <!-- Main Navigation Bar  -->
     <!-- Main Navigation Bar  -->
     <div class="container-fluid ">
-      <div class="d-flex">
 
-        <div class="flex-grow-1">
-        </div>
 
         <div>
           <nav class="d-flex justify-content-center nav">
-            <a class="nav-link h4 text-primary" id="home-Button">Overview</a>
+            <a class="nav-link h4 text-primary" id="home-Button">Home</a>
             <a class="nav-link h4 text-primary disabled border-bottom" id="projects-Button"> <span id="currently-Selected-Tab">Projects</span></a>
             <a class="nav-link h4 text-primary" id="contact-Button">Contact</a>
-          </nav>
-        </div>
-        <div class="flex-grow-1">
-          <nav id="cpsc581nav" class="px-4">
             <a class="nav-link h4 text-primary" id="cpsc581-Button">CPSC 581</a>
           </nav>
         </div>
-      </div>
+
+
     </div>
     <br>
     <br>
@@ -535,8 +529,15 @@
     </div>
 
 
-
     <!-- More Descriptions Here   -->
+
+
+
+
+    <div class="container fluid border-top">
+      <br>
+      <p> <small>This website was built by Zachariah Albers. See the GitHub repository for it <a href="https://github.com/zachalbers/zachalbers.github.io">here</a>.</small></p>
+    </div>
 
 
 
