--- a/CPSC581.html
+++ b/CPSC581.html
@@ -18,7 +18,7 @@
     <!-- Links -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="extraCss.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Orbitron:400,500|Russo+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Orbitron:400,500|Fredericka+the+Great" rel="stylesheet">
   </head>
   <body class="bg-light">
     <!--
