--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Links -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="extraCss.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Orbitron:400,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Orbitron:400,500|Fredericka+the+Great" rel="stylesheet">
   </head>
   <body class="bg-light">
     <!--
@@ -124,7 +124,7 @@
         <!-- Skills -->
         <div class="col col-md-12 col-lg-4">
           <h3 class="border-bottom">More About Me</h3>
-          <p>Hello</p>
+          <p> This section is not yet finished</p>
 
         </div>
         <div class="col col-md-12 col-lg-8">
@@ -243,17 +243,6 @@
       </div>
     </div>
 
-    <div class="container-fluid my-5 py-5">
-      <h3 class="border-bottom">Highlighted Projects:</h3>
-    </div>
-
-    <div class="container-fluid my-5 py-5">
-      <h3 class="border-bottom">Highlighted Projects:</h3>
-    </div>
-
-    <div class="container-fluid my-5 py-5">
-      <h3 class="border-bottom">Highlighted Projects:</h3>
-    </div>
 
 
 
@@ -285,6 +274,9 @@
           </div>
 
           <div class="modal-body">
+            <h5>This page is still under Development</h5>
+            <br>
+            <br>
 
 
             <div class="row">
