--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
         <br>
         <br>
 
-        <a href="https://github.com/zachalbers" class="btn btn-secondary" target="_blank"><img src="./imgs/GitHub-Icon.png" style="height: 1.3rem; width: 1.3rem"> GitHub Profile</a>
+        <a href="https://github.com/zachalbers" class="btn btn-secondary" target="_blank"><img src="./imgs/Github-Icon.png" style="height: 1.3rem; width: 1.3rem"> GitHub Profile</a>
 
       </div>
 
