Map Builder Page Completed

--- a/projects.html
+++ b/projects.html
@@ -157,6 +157,35 @@
           </div>
         </div>
 
+        <!--Highlighted Projects: Source Parser Project  -->
+        <div class="col-md d-flex justify-content-center align-items-center all-project enti-project ui-design-project mb-5">
+          <div class="card shadow-sm" style="width: 18rem; height: 30rem;">
+
+            <!--Link to full Project Desription  -->
+            <div class="card-body" data-toggle="modal" data-target="#BuildABeer-project">
+
+              <!-- Project: Image  -->
+              <img src="./imgs/buildABeer.png
+              " class="img-fluid">
+
+              <!-- Project: Title  -->
+              <h5 class="card-title">Source Parser Project</h5>
+
+              <!-- Project: Brief Descrption -->
+              <p class="card-text"> A prototype website build for a social enterprise..</p>
+            </div>
+
+            <!--Project: Tags  -->
+            <div class="card-footer">
+              <!-- UI Design Tag  -->
+              <button name="ui-design" type="button" class="btn btn-primary btn-sm ui-design-btn" style="font-size : 0.6rem">UI Design</button>
+              <!-- Entrepreneurship Tag  -->
+              <button name="enti" type="button" class="btn btn-primary btn-sm enti-btn" style="font-size : 0.6rem">Entrepreneurship</button>
+
+            </div>
+          </div>
+        </div>
+
         <!--Highlighted Projects: Neural Network Number Classifier  -->
         <div class="col-md d-flex justify-content-center align-items-center all-project python-project mb-5">
           <div class="card shadow-sm" style="width: 18rem; height: 30rem;">
@@ -188,17 +217,22 @@
           <div class="card shadow-sm" style="width: 18rem; height: 30rem;">
 
             <!--Link to full Project Desription  -->
+
+
             <div class="card-body" data-toggle="modal" data-target="#MapBuilder-project">
 
               <!-- Project: UniMap + Map Builder  -->
-              <img src="./imgs/projects/MapBuilder2.png
-              " class="img-fluid rounded">
+              <img src="./imgs/projects/Unimap/MapBuilder2.png
+              " class="img-fluid">
+
+              <br>
+              <br>
 
               <!-- Project: Title  -->
               <h5 class="card-title">UniMap + Map Builder</h5>
 
               <!-- Project: Brief Descrption -->
-              <p class="card-text"> UniMap and Map Builder built in Python..</p>
+              <p class="card-text"> A map application that displays the quickest route to travel between two locations, input by a user, in a graphical interface of the map, as well as the estimated time taken to get there..</p>
             </div>
 
             <!--Project: Tags  -->
@@ -569,12 +603,72 @@
             <br>
             <br>
 
-            <p class="modal-text"> This is a UniMap and Map Builder!..</p>
+            <div class="row">
+              <div class="col-12 col-md-6 col-lg-4">
+                <h4>Summary</h4>
+                <p>
+                  A map application that displays the quickest route to travel between two locations, input by a user, in a graphical interface of the map, as well as the estimated time taken to get there. UniMap was originally designed to give a map of the University of Calgary(hence the name), but has been modified to take in a text configuration file of the desired place a user would want to map.  The user is responsible for providing their own text configuration files with the exception of the defaults provided.
+                </p>
+                <p>UniMap will display a map(based on the text file selected by the user) along with a path from the user's current selected building to their destination building.  If the user has decided to add a legend then the time required by either walking, running, skateboarding, or biking will also be displayed along with icons.</p>
+                <br>
+                <br>
+
+              </div>
+
+              <div class="col-12 col-md-6 col-lg-8">
+                <figure class="figure">
+                  <img src="./imgs/projects/Unimap/MapBuilder2.png" class="img-fluid" style="width: 40rem;">
+                  <figcaption class="figure-caption text-center"> (Selection Page) </figcaption>
+                </figure>
+                <br>
+
+                <figure class="figure">
+                  <img src="./imgs/projects/Unimap/MapBuilder4.png" class="figure-img img-fluid rounded" style="width: 40rem;">
+                  <figcaption class="figure-caption text-center"> (Map Interface) </figcaption>
+                </figure>
+                <br>
+                <br>
+                <br>
+
+              </div>
+
+              <div class="col-12 col-md-6">
+                <h4>My Roles in the Project</h4>
+
+                <ul>
+                  <li> Brainstormed and helped come up with initial ideas and the implementation plan for the project</li>
+                  <li> Designed and programmed the logic for the map window, including the map legend, buildings, and highlighted path </li>
+                  <li> Designed and programmed map data structures & pathfinding logic </li>
+                </ul>
+
+                <h4>Tools/Platforms Used</h4>
+
+                <ul>
+                  <li>Atom</li>
+                  <li>Github</li>
+                </ul>
 
 
-            <img src="./imgs/projects/MapBuilder1.png" class="img-fluid rounded">
-            <img src="./imgs/projects/MapBuilder2.png" class="img-fluid rounded">
-            <img src="./imgs/projects/MapBuilder3.png" class="img-fluid rounded">
+              </div>
+
+              <div class="col-12 col-md-6">
+                <figure class="figure">
+                  <img src="./imgs/projects/Unimap/MapBuilder3.png" class="figure-img img-fluid rounded" style="width: 40rem;">
+                  <figcaption class="figure-caption text-center"> (Image from the Zoo map example) </figcaption>
+                </figure>
+
+              </div>
+
+              <div class="col-12">
+                <br>
+                <br>
+                <h4>What I Learned</h4>
+                <p> This project was the first in which I had the opportunity to spend a lot of time in the Java language and so was able to really learn a lot about application structure, alogrithm design, and data manipulation. </p>
+              </div>
+
+            </div>
+
+
           </div>
           <div class="modal-footer">
             <!-- Button opens new page showing repository -->
