--- a/index.html
+++ b/index.html
@@ -174,16 +174,16 @@
         <!--Highlighted Projects: Project 2  -->
         <div class="col-md d-flex justify-content-center align-items-center project ios-project web-dev-project mb-5">
           <div class="card shadow-sm" style="width: 18rem; height: 30rem;">
-            <div class="card-body" data-toggle="modal" data-target="#projectModal1">
+            <div class="card-body" data-toggle="modal" data-target="#NannyShack-project">
 
               <!-- Project: Image  -->
-              <img src="./imgs/TheNannyShackWebsite.jpg" class="img-fluid">
+              <img src="./imgs/projects/NannyShack/TheNannyShackWebsite.jpg" class="img-fluid">
 
               <!-- Project: Title  -->
               <h5 class="card-title">The Nanny Shack</h5>
 
               <!-- Project: Brief Descrption -->
-              <p class="card-text"> A prototype website build for a social enterprise that aims to help parents who are struggling to find affordable and flexible daycare, as well as nannies who are struggling to find secure job employment..</p>
+              <p class="card-text"> A prototype website and mobile app built for an online nanny-booking service. The website provides a system where the schedule for nannies can be viewed and updated...</p>
             </div>
 
             <!--Project Tags  -->
@@ -201,31 +201,31 @@
         </div>
 
 
-        <!--Highlighted Projects: Campus Map -  App Extension  -->
+        <!--Highlighted Projects: Campus Map - App Extension  -->
         <div class="col-md d-flex justify-content-center align-items-center project ios-project web-dev-project ui-design-project mb-5">
           <div class="card shadow-sm" style="width: 18rem; height: 30rem;">
-            <div class="card-body" data-toggle="modal" data-target="#projectModal1">
+            <div class="card-body" data-toggle="modal" data-target="#CampusMApp-project">
 
               <!-- Project: Image  -->
-
-                <img src="./imgs/projects/CampusMap/campusMapScreen01.png" class="img-fluid" style="height: 13rem;">
-                <img src="./imgs/projects/CampusMap/campusMapScreen02.png" class="img-fluid" style="height: 13rem;">
-
+              <div class="d-flex justify-content-around">
+                <img src="./imgs/projects/CampusMApp/campusMapScreen01.png" class="img-fluid" style="height: 11rem;">
+                <img src="./imgs/projects/CampusMApp/campusMapScreen02.png" class="img-fluid" style="height: 11rem;">
+              </div>
 
 
               <!-- Project: Title  -->
-              <h5 class="card-title">Campus Map - App Extension</h5>
+              <h5 class="card-title">Campus MApp - Scheduler Extension</h5>
 
               <!-- Project: Brief Descrption -->
-              <p class="card-text"> A prototype website build for a..</p>
+              <p class="card-text"> CampusMapp is an ongoing project that wants to make navigating campuses easier. I worked to develop for the app a way for users to upload their class schedule...</p>
             </div>
 
             <!--Project Tags  -->
             <div class="card-footer">
+              <!-- iOS Design Tag with Popover -->
+              <button type="button" class="btn btn-primary btn-sm disabled ios-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see related projects">iOS</button>
               <!-- UI Design Tag with Popover -->
-              <button type="button" class="btn btn-primary btn-sm disabled ui-design-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see related projects">iOS</button>
-              <!-- Entrepreneurship Tag with Popover -->
-              <button type="button" class="btn btn-primary btn-sm disabled enti-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see related projects">Entrepreneurship</button>
+              <button type="button" class="btn btn-primary btn-sm disabled ui-design-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see related projects">UI Design</button>
             </div>
           </div>
         </div>
@@ -391,6 +391,258 @@
         </div>
       </div>
     </div>
+
+    <!-- Campus MApp - Scheduler Extension Popup Window  -->
+    <div class="modal fade" id="CampusMApp-project" tabindex="-1" role="dialog" aria-labelledby="MB-label" aria-hidden="true">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+
+            <!-- Project: Campus MApp - Scheduler Extension  -->
+            <h2 class="modal-title" id="MB-label">Campus MApp - Scheduler Extension</h2>
+
+            <!-- Button: closes window  -->
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+
+
+            <div class="row">
+              <div class="col-12 col-lg-4">
+                <h4>Summary</h4>
+                <p>
+                  <a href="https://www.campusmapp.ca">CampusMApp</a> is an ongoing project that wants to make navigating campuses easier. I worked to develop for the app a way for users to upload their class schedule either by search selection or OCR. To accomplish this, my team and I first created a project plan after discussions with the CampusMApp staff to lay out realistic goals for our given timeline(1 semester). High-fidelity prototypes were then developed of what the scheduler could look like to recevie feedback from the clients as well as students(potential users). We then worked to develop the the scheduler in Xcode, which could then be implemented into the CampusMApp app.
+                </p>
+
+                <br>
+                <br>
+
+              </div>
+
+              <div class="col-12 col-lg-8 d-flex justify-content-around"">
+
+
+                  <figure class="figure" style="max-width: 40%;">
+                    <img src="./imgs/projects/CampusMApp/campusMapScreen01.png" class="img-fluid">
+                    <figcaption class="figure-caption text-center"> (Scheduler Page) </figcaption>
+                  </figure>
+
+
+                  <figure class="figure" style="max-width: 40%;">
+                    <img src="./imgs/projects/CampusMApp/campusMapScreen02.png" class="img-fluid">
+                    <figcaption class="figure-caption text-center"> (Course Selection Page) </figcaption>
+                  </figure>
+                  <br>
+                  <br>
+
+
+              </div>
+
+              <div class="col-12 col-md-6">
+                <h4>My Roles in the Project</h4>
+
+                <ul>
+                  <li> Discussed with CampusMApp managers and developers to determine the scope of the project and what our team should accomplish </li>
+                  <li> Designed and developed high-fidelity prototypes of the scheduler in Adobe XD </li>
+                  <li> Presented prototypes to students and other potential users in feedback sessions to get input on the designs, to improve the experience of using the schedule builder </li>
+                  <li> In Swift, developed a large portion of the scheduler's structure, including the course search/selection views and controllors as well as parsing course data</li>
+                </ul>
+
+                <h4>Tools/Platforms Used</h4>
+
+                <ul>
+                  <li>Xcode</li>
+                  <li>Github</li>
+                </ul>
+
+
+              </div>
+
+
+
+              <div class="col-12 col-md-6">
+                <h4>Prototypes Developed in Adobe XD</h4>
+                <div class="d-flex justify-content-center">
+                  <figure class="figure" style="max-width: 50%;">
+                    <img src="./imgs/projects/CampusMApp/gif3.gif" class="figure-img img-fluid">
+                    <figcaption class="figure-caption text-center"> (Gif of Design Iteration 3) </figcaption>
+                  </figure>
+                  <br>
+                  <br>
+
+                </div>
+
+
+              </div>
+
+              <div class="col-12">
+                <div class="d-flex justify-content-around">
+                  <figure class="figure" style="max-width: 30%;">
+                    <img src="./imgs/projects/CampusMApp/gif2.gif" class="figure-img img-fluid">
+                    <figcaption class="figure-caption text-center"> (Gif of Design Iteration 2) </figcaption>
+                  </figure>
+                  <figure class="figure" style="max-width: 30%;">
+                    <img src="./imgs/projects/CampusMApp/gif1.gif" class="figure-img img-fluid">
+                    <figcaption class="figure-caption text-center"> (Gif of Design Iteration 1) </figcaption>
+                  </figure>
+                </div>
+
+                <br>
+                <br>
+              </div>
+
+              <div class="col-12">
+                <br>
+                <br>
+                <h4>What I Learned</h4>
+                <p> This project exposed my more to the agile development cycle as well as working with more specific requirements given by a client. Working with Adobe XD to create mockups of the scheduler expanded my design skills. I also improved my Swift developement skills and learned about integrating components from different developers into one app.  </p>
+              </div>
+
+            </div>
+
+
+          </div>
+          <div class="modal-footer">
+            <!-- Button opens new page showing repository -->
+            <a class="btn btn-secondary disabled"href="#" target="_blank"><img src="./imgs/Github-Icon.png" style="height: 1.5rem; width: 1.5rem"> Private Repository</a>
+
+            <!-- Button: closes window  -->
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+    <!-- More Projects -->
+
+    <!-- Nanny Shack - Popup Window  -->
+    <div class="modal fade" id="NannyShack-project" tabindex="-1" role="dialog" aria-labelledby="MB-label" aria-hidden="true">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+
+            <!-- Project: Campus MApp - Scheduler Extension  -->
+            <h2 class="modal-title" id="MB-label"> The Nanny Shack</h2>
+
+            <!-- Button: closes window  -->
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+
+
+            <div class="row">
+              <div class="col-12 col-lg-6">
+                <h4>Summary</h4>
+                <p>
+                   A prototype website and mobile app built for an online nanny-booking service. The website provides a system where the schedule for nannies can be viewed and updated. Memberships are created for parents who can then see their financial information and their children’s schedule, and new users can check the availability of the daycare centre and then book a drop-in for their child. This report will first look at what problems The Nanny Shack faces that can be solved using our system. Then our systems architecture and design are described thoroughly, including the Extended Entity Relationship model which we used to build our system. The implementation of our system will also be described, including the Relationship Model as well as the SQL statements used. Finally, a user manual for our system is also included as well some sample data records.
+                </p>
+
+                <br>
+                <br>
+
+              </div>
+
+              <div class="col-12 col-lg-6 d-flex justify-content-around"">
+
+
+                  <figure class="figure" style="max-width: 90%;">
+                    <img src="./imgs/projects/NannyShack/NannyShackAbout.png" class="img-fluid">
+                    <figcaption class="figure-caption text-center"> (About Page) </figcaption>
+                  </figure>
+
+
+                  <br>
+                  <br>
+
+
+              </div>
+
+              <div class="col-12 col-md-6">
+                <h4>My Roles in the Project</h4>
+
+                <ul>
+                  <li> Looked for problems  </li>
+                  <li> Designed and developed high-fidelity prototypes of the scheduler in Adobe XD </li>
+                  <li> Presented prototypes to students and other potential users in feedback sessions to get input on the designs, to improve the experience of using the schedule builder </li>
+                  <li> In Swift, developed a large portion of the scheduler's structure, including the course search/selection views and controllors as well as parsing course data</li>
+                </ul>
+
+                <h4>Tools/Platforms Used</h4>
+
+                <ul>
+                  <li>Xcode</li>
+                  <li>Github</li>
+                </ul>
+
+
+              </div>
+
+
+
+              <div class="col-12 col-md-6">
+                <h4>Prototypes Developed in Adobe XD</h4>
+                <div class="d-flex justify-content-center">
+                  <figure class="figure" style="max-width: 50%;">
+                    <img src="./imgs/projects/CampusMApp/gif3.gif" class="figure-img img-fluid">
+                    <figcaption class="figure-caption text-center"> (Gif of Design Iteration 3) </figcaption>
+                  </figure>
+                  <br>
+                  <br>
+
+                </div>
+
+
+              </div>
+
+              <div class="col-12">
+                <div class="d-flex justify-content-around">
+                  <figure class="figure" style="max-width: 30%;">
+                    <img src="./imgs/projects/CampusMApp/gif2.gif" class="figure-img img-fluid">
+                    <figcaption class="figure-caption text-center"> (Gif of Design Iteration 2) </figcaption>
+                  </figure>
+                  <figure class="figure" style="max-width: 30%;">
+                    <img src="./imgs/projects/CampusMApp/gif1.gif" class="figure-img img-fluid">
+                    <figcaption class="figure-caption text-center"> (Gif of Design Iteration 1) </figcaption>
+                  </figure>
+                </div>
+
+                <br>
+                <br>
+              </div>
+
+              <div class="col-12">
+                <br>
+                <br>
+                <h4>What I Learned</h4>
+                <p> This project exposed my more to the agile development cycle as well as working with more specific requirements given by a client. Working with Adobe XD to create mockups of the scheduler expanded my design skills. I also improved my Swift developement skills and learned about integrating components from different developers into one app.  </p>
+              </div>
+
+            </div>
+
+
+          </div>
+          <div class="modal-footer">
+            <!-- Button opens new page showing repository -->
+            <a class="btn btn-secondary disabled"href="#" target="_blank"><img src="./imgs/Github-Icon.png" style="height: 1.5rem; width: 1.5rem"> Private Repository</a>
+
+            <!-- Button: closes window  -->
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+
 
     <div class="container fluid border-top">
       <br>
